Sat Jan 16 03:14:31 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Moved ANNOUNCE, BUGS, DEVELOPERS, FAQ, TODO, and Y2K-Compliance
	from top-level directory to docs.

	* tests: Created directory; put in script to test combinations of
	build options.
	* tests/purify: Created directory; this holds docs and scripts
	helpful for running purify on the source code.  This is not
	distributed in the .tar.gz files.

Fri Jan 15 22:10:18 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/fvwm2.1: Corrected the search sequence for startup files.

1999-01-16  Dominik Vogt  <dominik_vogt@hp.com>

	* BUGS: updated for 2.2

1999-01-14  Paul D. Smith  <psmith@gnu.org>

	* configure.in: If readline doesn't work with termcap, see if it
	works with ncurses (some installations are built against
	ncurses).

	* INSTALL.fvwm: Updated to document cpp issues.
	Updated to document shared library / -R issues.

1999-01-15  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/fvwm2.1: marked -blackout option as obsolete
	moved copyright notice to COPYING file

	* FAQ: updated/removed some questions and fixed some typos

1999-01-14  Tim Phipps <tim@quadrics.com>

	* Added alt-tab explanation to FAQ

1999-01-13  Bob Woodside  <proteus@pcnet.com>

	* fvwm/placement.c: Fixed SmartPlacement and CleverPlacemet failure
	to avoid sticky windows when placing SkipMapping, StartsOnPage or
	StartsOnDesk windows. Also fixed CleverPlacement bug that sometimes
	caused windows to be placed entirely outside of the virtual desktop.

1999-01-14  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/resize.c (ConstrainSize): fixed bug: moving a shaded window in
	FvwmPager screwed up the window's height

	* fvwm/fvwmdebug.c (DB_WI_ALL): fixed coredump

	* fvwm/menus.c (SetMenuItemSelected): removed malformed DBUG calls

	* fvwm/builtins.c (ButtonStyle): fixed parsing bug causing a hang

	* fvwm/module.c (HandleModuleInput): fixed parsing with popup

1999-01-13  Dominik Vogt  <dominik_vogt@hp.com>
