@@ -249,6 +249,10 @@ if test "$readline_LIBS"; then
 else
   # We couldn't use readline with termcap; try with ncurses?
   dnl FIXME: should compute availability of ncurses
+  dnl also: doesn't this seem a hacky way to do this??
+  dnl unset cached values from last check...
+  unset ac_cv_header_readline_readline
+  unset ac_cv_lib_readline_readline
   smr_CHECK_LIB(readline, , , readline, readline/readline.h, -lncurses)
   if test "$readline_LIBS"; then
     readline_LIBS="$readline_LIBS -lncurses"
