@@ -1,3 +1,8 @@
+1999-01-16  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>
+
+	* configure.in: Nuke cached values before retrying check for
+	libreadline (using -lncurses rather than -ltermcap).
+
 Sat Jan 16 03:14:31 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* Moved ANNOUNCE, BUGS, DEVELOPERS, FAQ, TODO, and Y2K-Compliance
